# osmosis-test-2

./: pyproject.toml
data_experiment/: 1_workbook_test.parquet  config.py  herald_stmt_to_ds.py  workbook_to_ds.py
lean_files/: Four.lean
mcp/tools/: math.py
reward_fn/: LEAN_REWARD_README.md  lean_reward.py  lean_reward_examples.py
reward_rubric/: lean_reward_rubric_ahthropic.py  lean_reward_rubric_anthropic.py  lean_rubric_openai.py
