[project]
name = "osmosis-git-sync-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lean-dojo",
    "fastmcp>=2.12.4",
    "osmosis-ai>=0.2.2",
    "starlette>=0.37.2",
    "rich>=14.1.0",
    "pyyaml>=6.0.1",
    "openai>=2.0.0",
]

[tool.setuptools]
packages = { find = { include = ["mcp*", "reward_fn*", "reward_rubric*"] } }
